--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Courier;
@@ -7,13 +8,20 @@ body{
     font-size: 16px;
 }
 #cabecera{
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
+
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+    
+}
+
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
@@ -33,5 +41,6 @@ body{
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
